--- a/Swift5Pod/Pages/AppCenterViewController.xib
+++ b/Swift5Pod/Pages/AppCenterViewController.xib
@@ -30,10 +30,22 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zws-pH-2ow">
+                    <rect key="frame" x="166.5" y="89" width="81" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="vjg-CX-jJe"/>
+                    </constraints>
+                    <state key="normal" title="Track Event"/>
+                    <connections>
+                        <action selector="buttonTrackEvent:" destination="-1" eventType="touchUpInside" id="MyF-34-346"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="WRV-Ci-KRs" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="16" id="3f3-G7-O39"/>
+                <constraint firstItem="zws-pH-2ow" firstAttribute="top" secondItem="WRV-Ci-KRs" secondAttribute="bottom" constant="8" id="IBc-om-UcN"/>
+                <constraint firstItem="zws-pH-2ow" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="TJF-AV-PLC"/>
                 <constraint firstItem="WRV-Ci-KRs" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="ihn-BY-2HM"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
